made grid view button hidden not display none to fix issues with filters exiting div on mobile

--- a/assets/product-grid.css
+++ b/assets/product-grid.css
@@ -1,3 +1,3 @@
 .gridv {
-  display: none;
+  visibility: hidden;
 }
